<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>me.hsgamer</groupId>
  <artifactId>hscore</artifactId>
  <version>4.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>HSCore</name>
  <description>The lazy core for my personal projects</description>
  <url>https://github.com/HSGamer/HSCore</url>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://github.com/HSGamer/HSCore/blob/master/LICENSE</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>HSGamer</name>
      <email>huynhqtienvtag@gmail.com</email>
      <url>https://github.com/HSGamer</url>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:https://github.com/HSGamer/HSCore.git</connection>
    <developerConnection>scm:git:git@github.com:HSGamer/HSCore.git</developerConnection>
    <url>https://github.com/HSGamer/HSCore</url>
  </scm>

  <modules>
    <module>hscore-common</module>
    <module>hscore-variable</module>
    <module>hscore-builder</module>
    <module>hscore-collections</module>
    <module>hscore-expression</module>
    <module>hscore-web</module>
    <module>hscore-request</module>
    <module>hscore-config</module>
    <module>hscore-addon</module>
    <module>hscore-checker</module>
    <module>hscore-database</module>
    <module>hscore-ui</module>
    <module>hscore-downloader</module>
    <module>hscore-crontime</module>
    <module>hscore-bukkit</module>
    <module>hscore-bungeecord</module>
    <module>hscore-all</module>
  </modules>

  <properties>
    <java.version>1.8</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.8.1</version>
      </plugin>
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>jar</goal>
            </goals>
            <id>attach-sources</id>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.2.1</version>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <source>${java.version}</source>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>jar</goal>
            </goals>
            <id>attach-javadocs</id>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.3.1</version>
      </plugin>
      <plugin>
        <artifactId>maven-shade-plugin</artifactId>
        <configuration>
          <shadedArtifactAttached>true</shadedArtifactAttached>
          <shadedClassifierName>jar-with-dependencies</shadedClassifierName>
          <keepDependenciesWithProvidedScope>false</keepDependenciesWithProvidedScope>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>shade</goal>
            </goals>
            <phase>package</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.2.4</version>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>23.0.0</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>jenkins</id>
      <activation>
        <property>
          <name>env.JENKINS_HOME</name>
        </property>
      </activation>

      <distributionManagement>
        <repository>
          <id>codemc-releases</id>
          <url>https://repo.codemc.io/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
          <id>codemc-snapshots</id>
          <url>https://repo.codemc.io/repository/maven-snapshots/</url>
        </snapshotRepository>
      </distributionManagement>
    </profile>
    <profile>
      <id>github</id>
      <activation>
        <property>
          <name>env.GITHUB_WORKFLOW</name>
        </property>
      </activation>

      <distributionManagement>
        <repository>
          <id>github</id>
          <name>GitHub Packages</name>
          <url>https://maven.pkg.github.com/HSGamer/HSCore</url>
        </repository>
      </distributionManagement>
    </profile>
  </profiles>

</project>
